# Triangulation-in-Deformable-Scenes

./: .gitignore  .qglviewer.xml  CMakeLists.txt  LICENSE  README.md  build_RealColon.sh  build_SLAM.sh  build_SynColon.sh  build_thirdparty.sh  debug.txt  moved_points.csv  original_points.csv
Data/: ARAP.py  ARAP_InRays.csv  ARAP_InRays.xlsx  Drunkard.yaml  Experiment.txt  Final.txt  Initial.txt  Realcolon.yaml  Simulation.yaml  Syncolon.yaml  Test.yaml  convert_to_csv.py  create_data.py  moved_points.csv  original_points.csv
Data/Excels/: .~lock.Elastic_InRays_1.xlsx#  ARAP_FarPoints_1.csv  ARAP_FarPoints_1.xlsx  ARAP_InRays.csv  ARAP_InRays.xlsx  ARAP_Modified_InRays_1.csv  ARAP_Modified_InRays_1.xlsx  ARAP_NoGlobal_InRays_1.csv  ARAP_NoGlobal_InRays_1.xlsx  ARAP_NoGlobal_TwoPoints_1.csv  ARAP_NoGlobal_TwoPoints_1.xlsx  ARAP_OneSet_InRays_1.csv  ARAP_OneSet_TwoPoints_1.csv  ARAP_TwoPoints.csv  ARAP_TwoPoints.xlsx  ARAP_TwoPoints_1.csv  ARAP_depth_InRays_1.xlsx  Elastic_FarPoints_1.csv  Elastic_FarPoints_1.xlsx  Elastic_InRays.csv  Elastic_InRays.xlsx  Elastic_InRays_1.csv  Elastic_TwoPoints_1.csv  Elastic_TwoPoints_1.xlsx  HyperElasticOdgen_InRays_1.csv  HyperElasticOdgen_InRays_1.xlsx  HyperElasticOdgen_TwoPoints_1.csv  HyperElasticOdgen_TwoPoints_1.xlsx
Data/Excels/Compare models/: Elastic_TwoPoints_1.xlsx
Data/Excels/Depth uncertainty/: ARAP_depth_3mm_TwoPoints_1.csv  ARAP_depth_3mm_TwoPoints_1.xlsx  ARAP_depth_8mm_FarPoints_1.csv  ARAP_depth_FarPoints_1.csv
Data/Excels/Drunkard/: Resume.csv  Resume.xlsx
Data/Excels/Drunkard/1024_00000_1229-1236/: FarPoints_1.csv  FarPoints_1.xlsx  FarPoints_10.csv  FarPoints_10.xlsx  FarPoints_11.csv  FarPoints_11.xlsx  FarPoints_12.csv  FarPoints_12.xlsx  FarPoints_13.csv  FarPoints_13.xlsx  FarPoints_14.csv  FarPoints_14.xlsx  FarPoints_15.csv  FarPoints_15.xlsx  FarPoints_16.csv  FarPoints_16.xlsx  FarPoints_17.csv  FarPoints_17.xlsx  FarPoints_18.csv  FarPoints_18.xlsx  FarPoints_19.csv  FarPoints_19.xlsx  FarPoints_2.csv  FarPoints_2.xlsx  FarPoints_20.csv  FarPoints_20.xlsx  FarPoints_3.csv  FarPoints_3.xlsx  FarPoints_4.csv  FarPoints_4.xlsx  FarPoints_5.csv  FarPoints_5.xlsx  FarPoints_6.csv  FarPoints_6.xlsx  FarPoints_7.csv  FarPoints_7.xlsx  FarPoints_8.csv  FarPoints_8.xlsx  FarPoints_9.csv  FarPoints_9.xlsx  (+80 more)
Data/Excels/Drunkard/1024_00001_110-120/: FarPoints_1.csv  FarPoints_1.xlsx  FarPoints_10.csv  FarPoints_10.xlsx  FarPoints_11.csv  FarPoints_11.xlsx  FarPoints_12.csv  FarPoints_12.xlsx  FarPoints_13.csv  FarPoints_13.xlsx  FarPoints_14.csv  FarPoints_14.xlsx  FarPoints_15.csv  FarPoints_15.xlsx  FarPoints_16.csv  FarPoints_16.xlsx  FarPoints_17.csv  FarPoints_17.xlsx  FarPoints_18.csv  FarPoints_18.xlsx  FarPoints_19.csv  FarPoints_19.xlsx  FarPoints_2.xlsx  FarPoints_20.csv  FarPoints_20.xlsx  FarPoints_3.csv  FarPoints_3.xlsx  FarPoints_4.csv  FarPoints_4.xlsx  FarPoints_5.csv  FarPoints_5.xlsx  FarPoints_6.csv  FarPoints_6.xlsx  FarPoints_7.csv  FarPoints_7.xlsx  FarPoints_8.csv  FarPoints_8.xlsx  FarPoints_9.csv  FarPoints_9.xlsx  InRays_1.csv  (+79 more)
Data/Excels/Drunkard/320_00000_1975-1983/: FarPoints_1.xlsx  FarPoints_10.csv  FarPoints_10.xlsx  FarPoints_11.xlsx  FarPoints_12.xlsx  FarPoints_13.xlsx  FarPoints_14.csv  FarPoints_14.xlsx  FarPoints_15.csv  FarPoints_15.xlsx  FarPoints_16.csv  FarPoints_16.xlsx  FarPoints_17.xlsx  FarPoints_18.xlsx  FarPoints_19.xlsx  FarPoints_2.xlsx  FarPoints_20.csv  (+66 more)
Data/Excels/Resumes/: Depth - Experiment 1.csv  Depth - Experiment 1.xlsx
Data/Scripts/: automated_loop_to_csv.py  config.py  convert_to_csv.py  create_data.py  create_exp_resume.py  run_experiments.py
Data/Scripts/real/: automated_loop_to_csv.py  convert_to_csv.py  create_exp_resume.py  run_experiments.py  run_real_experiments.py
Data/Scripts/realcolon/: createDepthImage.py  crop.py  decreaseRes.py  getUrlsImages.py  increaseRes.py  resize images.py  resizeDepths.py  resizeDepthsExr.py  resizeDepthsNpy.py
Data/Scripts/syncolon/: Rename.py  automated_loop_pointsData_to_csv.py  automated_loop_to_csv.py  convertToPng.py  convert_to_csv.py  create_exp_resume.py  create_pointsData_resume.py  graficas_allCurves.py  graficas_individually.py  graficas_lines.py  graficas_points.py  pointsData_to_csv.py  rename.py  run_experiments.py  trajectory.py
Data/Scripts/synthetic/: automated_loop_to_csv.py  convert_to_csv.py  create_data.py  create_exp_resume.py  run_synthetic_experiments.py
Execution/: CMakeLists.txt  Drunkard  Drunkard.cc  cotangent  cotangent.cc  drunkard.cc  main  main.cc  realcolon.cc  simulation  simulation.cc  syncolon.cc
Modules/: CMakeLists.txt
Modules/Calibration/: CameraModel.h  KannalaBrandt8.cc  KannalaBrandt8.h  PinHole.cc  PinHole.h
Modules/DatasetLoader/: DrunkardLoader.cc  DrunkardLoader.h  RealcolonLoader.cc  RealcolonLoader.h  SyncolonLoader.cc  SyncolonLoader.h
Modules/Features/: FAST.cc  FAST.h
Modules/Map/: KeyFrame.cc  KeyFrame.h  Map.cc  Map.h  MapPoint.cc  MapPoint.h
Modules/Mapping/: Frame.cc  Frame.h  LocalMapping.cc  LocalMapping.h  Mapping.cc  Mapping.h  MonocularMapInitializer.cc  MonocularMapInitializer.h
Modules/Matching/: DescriptorMatching.cc  DescriptorMatching.h
Modules/Optimization/: EigenOptimization.cc  EigenOptimization.h  Tet.cc  Tet.h  Triangle.cc  Triangle.h  g2oBundleAdjustment.cc  g2oBundleAdjustment.h  g2oTypes.cc  g2oTypes.h  nloptOptimization.cc  nloptOptimization.h
Modules/Results/: Experiment.txt
Modules/System/: SLAM.cc  SLAM.h  Settings.cc  Settings.h
Modules/Tracking/: Frame.cc  Frame.h  MonocularMapInitializer.cc  MonocularMapInitializer.h  Tracking.cc  Tracking.h
Modules/Utils/: CommonTypes.h  Conversions.cc  Conversions.h  Geometry.cc  Geometry.h  Measurements.cc  Measurements.h  Utils.cc  Utils.h
Modules/Visualization/: FrameVisualizer.cc  FrameVisualizer.h  MapVisualizer.cc  MapVisualizer.h
Own_modules/: CMakeLists.txt
Own_modules/Calibration/: PinHole.cc
Own_modules/Map/: Map.h  MapPoint.h
Own_modules/System/: SLAM.cc  Settings.h
Own_modules/Utils/: Geometry.h
Own_modules/Visualization/: MapVisualizer.h
(+5280 files in other folders)
